--- a/src/wheelAtributes/wheelSpin.css
+++ b/src/wheelAtributes/wheelSpin.css
@@ -3,11 +3,11 @@
 }
 
 .container{
-    width:500px;
-    height:500px;
+    width: 500px;
+    height: 500px;
     background-color: #ccc;
     border-radius:50%;
-    border:15px solid #dde;
+    border: 15px solid #dde;
     position: relative;
     overflow: hidden;
     transition: 5s;
@@ -22,9 +22,9 @@
     transform-origin:bottom;
     text-align:center;
     display:flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
-    font-size:20px;
+    font-size:40px;
     font-weight:bold;
     font-family:sans-serif;
     color:#fff;
@@ -99,17 +99,20 @@ i {
 }
 
 #spin{
+    position: relative;
+    z-index: 10;
+    top: 290px;
+    left: 210px;
     background-color: #e2e2e2;
     text-transform: uppercase;
     border:8px solid #fff;
     font-weight:bold;
-    font-size:20px;
-    color:#a2a2a2;
+    color: darkred;
+    font-size:18px;
     width: 80px;
-    height:80px;
+    height: 80px;
     font-family: sans-serif;
     border-radius:50%;
     cursor: pointer;
     outline:none;
-    letter-spacing: 1px;
 }
