--- a/src/inputBoxAtributes/inputBox.css
+++ b/src/inputBoxAtributes/inputBox.css
@@ -19,6 +19,10 @@ input {
     display: inline-block;
 }
 
+.questionbox {
+    padding: 10px;
+    font-size: 40px;
+}
 
 .button-27 {
     appearance: none;
@@ -33,11 +37,11 @@ input {
     font-size: 16px;
     font-weight: 600;
     line-height: normal;
-    margin: 0;
+    margin: 10px;
     min-height: 60px;
     min-width: 0;
     outline: none;
-    padding: 16px 24px;
+    padding: 20px 24px;
     text-align: center;
     text-decoration: none;
     transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
