--- a/src/inputBoxAtributes/inputBox.css
+++ b/src/inputBoxAtributes/inputBox.css
@@ -15,10 +15,15 @@
     color: white;
     letter-spacing: 25px;
     font-size: 50px;
+    min-height: 80px;
 }
 
 .char:disabled {
     color: black;
+}
+
+.correct {
+    background-color: green;
 }
 
 input {
