--- a/src/outputBoxAtributes/wheelBox.css
+++ b/src/outputBoxAtributes/wheelBox.css
@@ -1,4 +1,4 @@
-#outputBox {
+#wheelBox {
     font-size: 150px;
     border: 4px solid black;
     width: 200px;
@@ -6,6 +6,5 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 80px;
-    margin-left: 60px;
+    border-radius: 100px;
 }
