--- a/src/outputBoxAtributes/wheelBox.css
+++ b/src/outputBoxAtributes/wheelBox.css
@@ -1,10 +1,14 @@
 #wheelBox {
     font-size: 150px;
-    border: 4px solid black;
+    border: 4px solid white;
     width: 200px;
     height: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 100px;
+}
+
+.white-text {
+    color: white;
 }
